<resources>
    <string name="app_name" translatable="false">TagMe!</string>
    <string name="errorMessage">Some error</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="send_request">Send Request</string>
    <string name="send_friend_request">Send a friend request</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends">Friends</string>
    <string name="add_a_friend_button">Add a friend button</string>
    <string name="go_to_rating_button">Go to rating button</string>
    <string name="Rating">Rating</string>
    <string name="nickname">Nickname</string>
    <string name="tag_counter_format" translatable="false">Tags: %d</string>
    <string name="go_back_button">go back button</string>
    <string name="settings_button">settings button</string>
    <string name="nickname_text_placeholder">Nickname</string>
    <string name="last_message_placeholder">Start a conversation!</string>
    <string name="enter_your_message">Enter a message!</string>
    <string name="send_a_message_button">send a message</string>
    <string name="attach_button">attach button</string>
    <string name="text">text</string>
    <string name="timestamp" translatable="false">00:00</string>
    <string name="conversations">Conversations</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="location_request">The application requires access to geolocation to operate.</string>
    <string name="turn_location_on">Enable geolocation</string>
    <string name="date_placeholder" translatable="false">01.02.2024</string>
    <string name="profile">Profile</string>
    <string name="centralize">Centralize</string>
    <string name="message">Message</string>
    <string name="search">search</string>
    <string name="add_geo_story">Add geo story</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_friends_only">privacy friends only</string>
    <string name="privacy_global">privacy global</string>
    <string name="photo_preview">Photo preview</string>
    <string name="compressing">Compressing…</string>
    <string name="add_friend">Add friend</string>
    <string name="tagme" translatable="false">TagMe!</string>
    <string name="block">Block</string>
    <string name="In_friends">in friends</string>
    <string name="find_on_map">Find on map</string>
    <string name="unfriend">Unfriend</string>
    <string name="friends_since_format">Friends since %s</string>
    <string name="long_message_format" translatable="false">%s…</string>
    <string name="blocked">Blocked</string>
    <string name="unblock">"Unblock"</string>
    <string name="speed_format">%d km/h</string>
    <string name="distance_format_km">%s km</string>
    <string name="distance_format_m">~%s m</string>
    <string name="distance_format_m_less_than">&lt;100 m</string>
    <string name="seconds_ago_format">%d seconds ago</string>
    <string name="minutes_ago_format">%d minutes ago</string>
    <string name="hours_ago_format">%d hours ago</string>
    <string name="empty_login_password">Enter login and password</string>
    <string name="conversation">Conversation</string>
    <string name="You">You</string>
    <string name="thats_you">Thats you!</string>
    <string name="notifications">Notifications</string>
    <string name="memory">Memory</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="geo_story_by_format">GeoStory by %s</string>
    <string name="cant_message">You cannot message this person!</string>
    <string name="geo_story_created">Geo story was created</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="friend_request_sent">Friend request was sent!</string>
    <string name="empty_field">Empty field! 😠</string>
    <string name="connect_error">Connection to the server was lost</string>
    <string name="user_not_found">User not found</string>
    <string name="pfp_updated">Profile picture was updated!</string>
    <string name="openstreetview" translatable="false">
        <![CDATA[
        <a href="https://www.openstreetmap.org/copyright">
            <u>OpenStreetView</u>
        </a>
    ]]>
    </string>
    <string name="counter" translatable="false">0</string>
    <string name="incoming_request">Incoming request</string>
    <string name="outgoing_request">Outgoing request</string>
    <string name="blocked_incoming">Blocked you</string>
    <string name="blocked_outgoing">User blocked</string>
    <string name="blocked_mutual">Mutually blocked</string>
    <string name="no_relation">No relation</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="press_back_again">Press Back Again To Exit</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="are_you_sure_delete_conversation">Are you sure you want to delete this conversation?</string>
    <string name="are_you_sure_delete_conversation_format">It will also be deleted for %s.</string>
    <string name="are_you_sure_block_format">Are you sure you want to block %s?</string>
    <string name="are_you_sure_unfriend_format">Are you sure you want to unfriend %s?</string>
    <string name="new_message_format">New message from %s</string>
    <string name="new_friend_request_format">You have a new friend request from %s</string>
    <string name="new_friend_request">New friend request</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_friend_request">Cancel friend request</string>
    <string name="answer_friend_request">Answer a request</string>
    <string name="loading">Loading…</string>
    <string name="no_location">User location could not be found</string>
    <string name="messages">Messages</string>
    <string name="you_cannot_message">You cannot message this user :(</string>
    <string name="loading_server_connect">Connecting to the server…</string>
    <string name="loading_server_await">Awaiting for the server answer…</string>
    <string name="loading_vk">Waiting for VK response…</string>
    <string name="loading_server_reconnect">Trying to reconnect to server…</string>
    <string name="loading_map">Loading map resources…</string>
    <string name="message_too_long">Message is too long!</string>
    <string name="error_too_short">Password must be at least 8 symbols.</string>
    <string name="error_no_capital">Password must contain at least one capital letter.</string>
    <string name="error_no_digits">Password must contain at least one digit.</string>
    <string name="error_login_too_long">Login must not exceed 14 symbols.</string>
    <string name="error_password_too_long">Password must not exceed 19 symbols.</string>
    <string name="error_user_already_exists">Username is already taken</string>
    <string name="error_incorrect_login_or_pass">Incorrect login or password</string>
    <string name="change_username">Change Username</string>
    <string name="changing_username">Changing Username</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="username_changed">Username was successfully changed!</string>
    <string name="username_taken">Username is already taken :(</string>
    <string name="storage_settings">Storage settings</string>
    <string name="storage">Storage</string>
    <string name="cached_images">Cached Images</string>
    <string name="kb_format">%d KB</string>
    <string name="mb_format">%d MB</string>
    <string name="calculating_size">Calculating size…</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="rating">Rating</string>
    <string name="people_nearby_setting">Enable \"People Nearby\"</string>
    <string name="find_people_nearby">Find People Nearby</string>
    <string name="people_nearby">People Nearby</string>
    <string name="vk_error">Something went wrong, please try again 😔</string>
</resources>