<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_background"
                android:gravity="center"
                android:paddingHorizontal="40dp">


    <!-- Просьба включить геолокацию, изначально невидима -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:id="@+id/login_layout">

        <ImageView
                android:layout_width="234dp"
                android:layout_height="227dp"
                android:src="@drawable/Earth"
                android:importantForAccessibility="no">
        </ImageView>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TagMe!"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="55sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="-15dp"
        />
        <FrameLayout android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="10dp">

            <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/white"
                    android:background="@drawable/input_rectangle"
                    android:padding="9dp"
                    android:inputType="text"
                    android:autofillHints="username"
                    android:fontFamily="@font/my_font"
                    android:textSize="20sp"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/icon_profile_login"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"/>
        </FrameLayout>
        <FrameLayout android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="10dp">
            <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:background="@drawable/input_rectangle"
                    android:padding="9dp"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:fontFamily="@font/my_font"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/key_vertical_password"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="25dp"
                    android:layout_height="wrap_content"/>
        </FrameLayout>
        <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_font"
                android:textColor="#FF0000"
                android:text="@string/errorMessage"
                android:textSize="20sp"
                android:paddingTop="9dp"
                android:visibility="gone"
        />
        <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/my_font"
                android:background="@drawable/rect_bg"
        />
        <ImageView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                android:layout_marginVertical="15dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"

        />
        <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"

                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/my_font"
                android:background="@drawable/rect_bg"

        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/enable_gps_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
        <TextView
                android:id="@+id/tvPermissionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_request"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:fontFamily="@font/my_font"
                android:textColor="@color/white"
                android:textAlignment="center"
        />

        <Button
                android:id="@+id/EnableLocationbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:fontFamily="@font/my_font"
                android:textColor="@color/white"
                android:background="@drawable/rounded_corner"
                android:text="@string/turn_location_on"
        />
    </LinearLayout>
</RelativeLayout>
