<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

<androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/geo_story_gradient_2">

    <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp">
            <ImageButton
                    android:id="@+id/back_arrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:background="@null"
                    android:contentDescription="@string/go_back_button"/>
        </LinearLayout>
        <FrameLayout
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
        >
            <ImageView
                    android:id="@+id/geo_story_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:background="@drawable/geo_story_gradient"
                    android:src="@drawable/photo_bg"
                    android:contentDescription="@string/photo_preview"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/add_a_photo" android:importantForAccessibility="no"/>
        </FrameLayout>




        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="5dp"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:fontFamily="@font/my_font"
                    android:textSize="45sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
            />

            <ImageButton
                    android:id="@+id/global_privacy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/planet"
                    android:textSize="20sp"
                    android:background="@color/transparent"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/privacy_global"/>
            <ImageButton
                    android:id="@+id/friend_only_privacy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/friends"
                    android:textSize="20sp"
                    android:background="@color/transparent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/privacy_friends_only"/>
        </LinearLayout>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/separator_big"
                android:layout_marginVertical="15dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"/>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</FrameLayout>
