<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/friend_layout"
        android:background="@drawable/background_for_user"
        android:clickable="true"
        android:focusable="true"
>
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
        >
            <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    android:layout_marginHorizontal="17dp"
                    android:background="@color/transparent"
            />
            <TextView
                    android:id="@+id/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
            />
        </RelativeLayout>
        <LinearLayout
                android:id="@+id/notifications_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="20dp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/friend_requests"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginStart="14dp"
                />
                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/friend_requests_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="25dp"
                        android:thumb="@drawable/switch_thumb"
                        app:track="@drawable/switch_track"
                        app:switchMinWidth="55dp"
                />
            </LinearLayout>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/separator_big"/>
            <LinearLayout
                    android:id="@+id/messages_notifications_layout"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:clickable="true"
            >
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/messages"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginStart="14dp"
                />
                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/messages_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="25dp"
                        android:thumb="@drawable/switch_thumb"
                        app:track="@drawable/switch_track"
                        app:switchMinWidth="55dp"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="70dp"
    >
        <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/settings"
                android:layout_marginBottom="40dp"

        />
        <LinearLayout
                android:id="@+id/notifications_layout_button"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:clickable="true"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
            />
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"
                    android:layout_marginEnd="25dp"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/separator_big"/>
        <LinearLayout
                android:id="@+id/memory_layout"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:clickable="true"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/memory"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
            />
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"
                    android:layout_marginEnd="25dp"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/separator_big"
                android:visibility="gone"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:visibility="gone"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
            />
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"
                    android:layout_marginEnd="25dp"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/separator_big"/>
        <LinearLayout
                android:id="@+id/exit_layout"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:clickable="true"
        >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/exit"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
            />
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow_right"
                    android:layout_marginEnd="25dp"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/separator_big"
        />
    </LinearLayout>

    <View
            android:id="@+id/dark_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3000000"
            android:visibility="gone"
    />

    <LinearLayout
            android:id="@+id/are_you_sure_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/add_friend_background"
            android:layout_gravity="center"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_logout"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="#425890"
                android:fontFamily="@font/my_font"
                android:layout_gravity="center"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
        >
            <Button
                    android:id="@+id/no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="20sp"
                    android:background="@drawable/send_request_background"
                    android:fontFamily="@font/my_font"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="16dp"
                    android:textColor="@color/white"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
            />
            <Button
                    android:id="@+id/yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="20sp"
                    android:background="@drawable/send_request_background"
                    android:fontFamily="@font/my_font"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="16dp"
                    android:textColor="@color/white"
            />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>